Adding language switcher in  place of placeholder nav

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -495,3 +495,7 @@ video {
 .block {
   display: block;
 }
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
