--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title data-rosey="site-title">{{ .Site.Title }}</title>
+    <title>{{ .Site.Title }}</title>
 
     <!-- Alpine -->
     <script
@@ -19,8 +19,8 @@
     <link rel="stylesheet" href="{{ $scss.Permalink }}" />
 
     {{ partial "css.html" . }}
-    
-    <link rel="stylesheet" href="/css/styles.css">
+
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
 
   <body>
