Test fix for new markdown lines in a Rosey tag

--- a/component-library/components/hero/hero.hugo.html
+++ b/component-library/components/hero/hero.hugo.html
@@ -3,13 +3,11 @@
 <div class="{{ $c }}">
   <div class="{{ $c }}__wrapper">
     {{ with .heading }}
-      <h1 data-rosey="{{ . | anchorize}}">{{ . }}</h1>
-    {{ end }} 
-    {{ with .text }}
-    <p data-rosey="{{ . | anchorize }}">{{ . | markdownify }}</p>
-    {{ end }} 
-    {{ with .button }} 
-    {{ partial "bookshop" . }} 
-    {{ end }}
+    <h1 data-rosey="{{ . | anchorize }}">{{ . }}</h1>
+    {{ end }} {{ with .text }}
+    <div data-rosey="{{ . | anchorize }}">
+      {{ . | markdownify }}
+    </div>
+    {{ end }} {{ with .button }} {{ partial "bookshop" . }} {{ end }}
   </div>
 </div>
