--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -495,7 +495,16 @@ video {
 .block {
   display: block;
 }
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
+.w-\[32px\] {
+  width: 32px;
+}
+.w-4 {
+  width: 1rem;
+}
+.w-12 {
+  width: 3rem;
+}
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
