--- a/component-library/components/hero/hero.hugo.html
+++ b/component-library/components/hero/hero.hugo.html
@@ -6,7 +6,7 @@
       <h1 data-rosey="{{ . | anchorize }}">{{ . }}</h1>
     {{ end }} 
     {{ with .text }}
-    <div data-rosey="{{ . | anchorize }}">
+    <div data-rosey-ns="markdown" data-rosey="{{ . | anchorize }}">
       {{ . | markdownify }}
     </div>
     {{ end }} 
