--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -98,7 +98,7 @@ body {
   &__lang-list-mobile {
     position: absolute;
     z-index: 99;
-    top: 76px;
+    top: 3rem;
     right: 0;
 
 
@@ -112,7 +112,7 @@ body {
     flex-direction: column;
     align-items: flex-end;
     justify-content: end;
-    gap: 1rem;
+    gap: 0.25rem;
 
     li a{
       
